--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@deck.gl/carto": "^9.0.14",
     "deck.gl": "^9.0.14",
+    "gh-pages": "^6.3.0",
     "mapbox-gl": "^3.3.0",
     "maplibre-gl": "^4.2.0",
     "react": "^18.2.0",
